# Projeto-Default

./: .editorconfig  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  USAGE.md  docker-compose.prod.yml  docker-compose.yml  release-please-config.json
.cursor/rules/: 00-core.mdc  10-planning.mdc  20-prototyping.mdc  30-development.mdc  31-testing.mdc  32-security.mdc  40-finalization.mdc  90-screens-mandatory.mdc
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_report.md
.github/workflows/: ci.yml  release.yml  security.yml
apps/backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 0001_init.py
apps/backend/app/: audit.py  config.py  db.py  deps.py  logging_config.py  main.py  models.py  security.py
apps/backend/app/routers/: audit_logs.py  auth.py  health.py  logs.py  manual.py
apps/backend/projeto_padrao_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/backend/tests/: conftest.py  test_audit_chain.py
apps/frontend/: .dockerignore  .env.example  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
apps/frontend/src/: App.vue  main.ts  router.ts
apps/frontend/src/__tests__/: auth.store.test.ts
apps/frontend/src/api/: client.ts
apps/frontend/src/components/: AppShell.vue
apps/frontend/src/stores/: auth.ts
apps/frontend/src/styles/: tokens.css
apps/frontend/src/views/: AdminAuditLogs.vue  AdminLogs.vue  Forbidden.vue  Home.vue  Login.vue  Manual.vue  NotFound.vue
docs/: tooling.md
docs/adr/: ADR-0001-stack-obrigatoria.md
docs/checklists/: accessibility-checklist.md  performance-checklist.md  qa-checklist.md  release-checklist.md  security-checklist.md
docs/prompts/: 01-prd-from-idea.md  02-sdd-from-prd.md  03-backlog-from-sdd.md  04-task-implementation.md  05-test-generation.md  06-security-review.md  07-release-notes.md
docs/screens/: audit-logs-screen.spec.md  logs-screen.spec.md  manual-screen.spec.md
docs/templates/: ADR-0000-template.md  CHANGELOG.md  DoD.md  DoR.md  PRD.md  PRIVACY-LGPD.md  RELEASE.md  RISKS.md  RUNBOOK.md  SDD.md  SECURITY-REVIEW.md  THREAT-MODEL.md  backlog.md
scripts/: new-project.mjs  new-project.sh
