[project]
name = "projeto-padrao-backend"
version = "0.1.0"
description = "Backend FastAPI do template Projeto-Padrão"
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14",
    "psycopg[binary]>=3.2",
    "argon2-cffi>=23.1",
    "python-jose[cryptography]>=3.3",
    "structlog>=24.4",
    "httpx>=0.27",
    "python-multipart>=0.0.12",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "pytest-postgresql>=6.1",
    "mypy>=1.13",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "S", "A", "C4", "T20", "RUF"]
# B008 e B904: padrões idiomáticos do FastAPI (Depends() default + raise from).
# S101: pytest usa assert. S104: bind 0.0.0.0 em container é intencional.
ignore = ["S101", "B008", "B904"]

[tool.ruff.lint.per-file-ignores]
# Testes: senhas literais são esperadas em fixtures.
"tests/*" = ["S105", "S106", "N806"]
# Migrations e alembic env: linhas longas (schema), naming style do alembic.
"alembic/**/*" = ["E501", "N806", "N802"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-ra --strict-markers --cov=app --cov-report=term"
testpaths = ["tests"]
